--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,28 +1,49 @@
 {
-// 有关 tasks.json 格式的文档，请参见
-    // https://go.microsoft.com/fwlink/?LinkId=733558
     "version": "2.0.0",
     "tasks": [
         {
             "type": "shell",
             "label": "g++.exe build active file",
-            "command": "C:\\Strawberry\\c\\bin\\g++.exe",
+            "command": "/usr/bin/g++.exe",
             "args": [
                 "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
-                "-std=c++17",   //使用c++17
+                "-std=c++17",
                 "-Wall",
                 "-static"
             ],
             "options": {
-                "cwd": "C:\\Strawberry\\c\\bin"
+                "cwd": "/usr/bin/"
             },
             "problemMatcher": [
                 "$gcc"
             ],
             "group": "build"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++ 生成活动文件",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}.out"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "调试器生成的任务。"
         }
     ]
 }
